--- a/static/css/reset.css
+++ b/static/css/reset.css
@@ -89,6 +89,12 @@ input, select {
 	transform: translate(-50%,-50%);
 }
 
+/* zyq 加 用于撑开头部 */
+.height-88 {
+    width: 100%;
+    height: 88px;
+}
+
 
 
 
